generate core package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mahjong-client",
   "private": true,
+  "scripts": {
+    "lerna": "lerna"
+  },
   "devDependencies": {
     "lerna": "^3.16.4"
   }
