--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "watch": "rollup -cw",
+    "dev": "rollup -cw",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
