--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mahjong-client-core",
+  "name": "@mahjong-client/core",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "rollup -c",
     "dev": "rollup -cw",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
