--- a/package.json
+++ b/package.json
@@ -7,13 +7,6 @@
     "lint": "eslint '*/**/*.{js,ts}'"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "lerna": "^3.16.4",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "lerna": "^3.16.4"
   }
 }
