--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "lerna": "lerna",
     "dev": "lerna exec --parallel npm run dev",
-    "lint": "lerna exec --no-bail npm run lint"
+    "lint": "lerna exec --no-bail npm run lint",
+    "lint:fix": "lerna exec --no-bail 'npm run lint -- --fix'"
   },
   "devDependencies": {
     "lerna": "^3.16.4"
