routing with crayon

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,6 +28,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@mahjong-client/core": "^0.0.0"
+    "@mahjong-client/core": "^0.0.0",
+    "crayon": "^2.3.0",
+    "crayon-svelte": "^1.0.1"
   }
 }
