--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "rollup": "^1.17.0",
+    "rollup-plugin-eslint": "^7.0.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   }
