--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public",
+    "dev": "webpack-dev-server",
     "lint": "eslint --ext '.js,.svelte' ."
   },
   "devDependencies": {
@@ -13,6 +13,7 @@
     "css-loader": "^2.1.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "html-webpack-plugin": "^3.2.0",
