run test from root

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "lerna": "lerna",
     "dev": "lerna exec --parallel npm run dev",
+    "test": "lerna exec --parallel npm run test",
     "lint": "lerna exec --no-bail npm run lint",
     "lint:fix": "lerna exec --no-bail 'npm run lint -- --fix'"
   },
