--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@mahjong-client/core": "^0.0.0",
+    "firebase": "^6.3.5",
     "svelte-routing": "^1.2.1"
   }
 }
