create user after twitter login

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,5 +23,8 @@
     "rollup-plugin-eslint": "^7.0.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "@ridi/object-case-converter": "^2.0.4"
   }
 }
