--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@mahjong-client/core": "^0.0.0",
     "firebase": "^6.3.5",
+    "snakecase-keys": "^3.1.0",
     "svelte-routing": "^1.2.1"
   }
 }
