--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,8 +20,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "prettier": "^1.18.2",
     "serve": "^11.0.0",
-    "svelte": "^3.0.0",
-    "svelte-loader": "2.13.3",
+    "svelte": "^3.8.1",
+    "svelte-loader": "^2.13.6",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
@@ -31,6 +31,6 @@
     "@mahjong-client/core": "^0.0.0",
     "firebase": "^6.3.5",
     "snakecase-keys": "^3.1.0",
-    "svelte-routing": "^1.2.1"
+    "svelte-routing": "^1.3.0"
   }
 }
