--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,6 +31,6 @@
     "@mahjong-client/core": "^0.0.0",
     "firebase": "^6.4.0",
     "snakecase-keys": "^3.1.0",
-    "svelte-routing": "^1.3.0"
+    "svelte-spa-router": "^1.2.0"
   }
 }
