--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@mahjong-client/core": "^0.0.0",
+    "@mahjong-client/core": "file:../core",
     "firebase": "^6.4.0",
     "snakecase-keys": "^3.1.0",
     "svelte-spa-router": "^1.2.0"
