--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "test": "node run.js test",
     "lint": "node run.js run lint",
     "lint:fix": "node run.js run lint -- --fix",
-    "install": "node run.js install"
+    "postinstall": "node run.js install"
   }
 }
