--- a/before/packages/core/package.json
+++ b/before/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mahjong-client/core",
+  "name": "mahjong-client-core",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
