--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
       "prettier-standard"
     ]
   },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -46,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
     "prettier-config-standard": "^1.0.1",
     "react-scripts": "3.2.0",
