--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     ]
   },
   "dependencies": {
+    "camel-case": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "snake-case": "^3.0.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.23",
